@@ -3,10 +3,10 @@
 #define BAVAFA2008_H
 #include <src/common.h>
   
-void find_W_bavafa2008( gl_t *gl, spec_t rhok, double T, double Te, double Tv, double Estar, 
+void find_W_bavafa2008( np_t np, gl_t *gl, spec_t rhok, double T, double Te, double Tv, double Estar, 
                   double Qbeam, spec_t W );
 
-void find_dW_dx_bavafa2008 ( gl_t *gl, spec_t rhok, double T, double Te, double Tv, 
+void find_dW_dx_bavafa2008 ( np_t np, gl_t *gl, spec_t rhok, double T, double Te, double Tv, 
                   double Estar, double Qbeam, spec2_t dWdrhok, spec_t dWdT, spec_t dWdTe, 
                   spec_t dWdTv, spec_t dWdQbeam );
 
